--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Dejan Lutring",
   "license": "MIT",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
     "gulp-rename": "^1.4.0",
