--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "gulp-uglify": "^3.0.1",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "parsleyjs": "^2.8.1"
   }
 }
